# nestpy_protocols

./: .gitignore  instigacion.md  main.py  pyproject.toml
nestpy_protocols/test/: laboratory.py
nestpy_protocols/webadapters/: __init__.py
nestpy_protocols/webadapters/contracts/: __init__.py  server_docs.py  server_events.py  server_functions.py  server_middlewares.py  server_params.py  server_routers.py  web_server.py
nestpy_protocols/webadapters/interfaces/: __init__.py
nestpy_protocols/webadapters/interfaces/framework/: attributes.py  docs.py  events.py  functions.py  middlewares.py  routers.py  statics.py  web.py
nestpy_protocols/webprotocols/: __init__.py
nestpy_protocols/webprotocols/framework/: base.py  behaviors.py  comp.py  conf.py  doc.py  docs.py  errors.py  events.py  exc.py  init_params.py  lif.py  main.py  middlewares.py  mw.py  routing.py
